k8s/zulip-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zulip
  namespace: zulip-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zulip
  template:
    metadata:
      labels:
        app: zulip
    spec:
      containers:
        - name: zulip
          image: your-dockerhub-username/zulip-app:latest   # <-- Image from Docker Hub
          imagePullPolicy: Always                          # Always check Docker Hub for latest
          ports:
            - containerPort: 9991
