k8s/zulip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zulip
spec:
  type: NodePort
  ports:
    - port: 9991
      targetPort: 9991
      nodePort: 30080
  selector:
    app: zulip
