k8s/zulip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zulip-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: zulip.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zulip
                port:
                  number: 9991
